--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+    <script src="js/three.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
