--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script src="js/three.min.js"></script>
+    <script src="js/GLTFLoader.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
