--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
+    <script src="js/gsap.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
