--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+    <p class="text">Loading...</p>
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/gsap.min.js"></script>
