--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <p class="text">Loading...</p>
+    <button class="restart-btn" onclick="location.reload()">Restart</button>
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/gsap.min.js"></script>
