--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <p class="text">Loading...</p>
     <button class="restart-btn" onclick="location.reload()">Restart</button>
-    <script src="js/three.min.js"></script>
-    <script src="js/GLTFLoader.js"></script>
-    <script src="js/gsap.min.js"></script>
+    <script src="js/libs/three.min.js"></script>
+    <script src="js/libs/GLTFLoader.js"></script>
+    <script src="js/libs/gsap.min.js"></script>
     <script src="js/main.js" type="module"></script>
 </body>
 </html>
